Docker/Ukiyo/proyectos/personales/ptaller/deploy/kubernetes/deploy-webtaller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webtaller-deployment
  namespace: proyectotaller
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webtaller
  template:
    metadata:
      labels:
          app: webtaller
    spec:
      containers:
        - name: webtaller
          image: fabricio07/ubefpnptaller:latest
        # imagePullPolicy: Never
          ports:
            - containerPort: 80
