Docker/Ukiyo/proyectos/personales/ptaller/deploy/kubernetes/pod-webtaller.yml
apiVersion: v1
kind: Pod
metadata:
  name: webtaller
  namespace: proyectotaller
spec:
  containers:
    - name: pod-webtaller
      image: fabricio07/ubefpnptaller:latest
      ports:
        - containerPort: 80
