Docker/Ukiyo/proyectos/personales/ptaller/deploy/kubernetes/ingress-webtaller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtaller-service
  namespace: proyectotaller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: webtaller.efparagulla.es
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webtaller-service
              port:
                number: 80
